gccida/c0/get_last_value_validate
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value_validate/src/combine.c:11978:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value_validate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value_validate/src/combine.c:11979:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value_validate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value_validate/src/combine.c:12001:34: error: use of undeclared identifier 'machine_mode'
*loc = gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), const_int_rtx[64]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value_validate/src/combine.c:12001:49: error: expected expression
*loc = gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), const_int_rtx[64]); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value_validate/src/combine.c:12021:34: error: use of undeclared identifier 'machine_mode'
*loc = gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), const_int_rtx[64]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value_validate/src/combine.c:12021:49: error: expected expression
*loc = gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), const_int_rtx[64]); 
                                                ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value_validate/src/obj/combine.o] Error 1
